cleanup and adding tabs

--- a/nvme_rhel_81.adoc
+++ b/nvme_rhel_81.adoc
@@ -169,7 +169,9 @@ NVME Statistics
 …
 ----
 
+==	Enable 1MB I/O Size for Broadcom NVMe/FC
 
+include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
 ==	Validate NVMe/FC
 
