--- a/nvme_rhel_87.adoc
+++ b/nvme_rhel_87.adoc
@@ -101,9 +101,12 @@ defaults {
 
 
 == Configure NVMe/FC
+You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
 
-=== Broadcom/Emulex
-
+[role="tabbed-block"]
+====
+.Broadcom/Emulex
+--
 .Steps
 
 .	Verify that you are using the supported adapter. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported adapters.
@@ -173,35 +176,14 @@ Total FCP Cmpl 0000000004909464 Issue 0000000004908531 OutIO fffffffffffff0cd
 abort 0000004f noxri 00000000 nondlp 00000361 qdepth 00000000 wqerr 00000000 err 00000000  
 FCP CMPL: xb 0000006b Err 00017f99 
 ----
+--
 
-
-====	 Enable 1 MB I/O size (Optional)
-
-ONTAP reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data which means the maximum I/O request size should be up to 1 MB. However, to issue I/O requests of size 1 MB for the Broadcom NVMe/FC host, the lpfc parameter `lpfc_sg_seg_cnt` should also be bumped up to 256 from the default value of 64. Use the following instructions to do so:
-
-.Steps
-
-. Append the value `256` in the respective `modprobe lpfc.conf` file:
-+
-----
-# cat /etc/modprobe.d/lpfc.conf
-options lpfc lpfc_sg_seg_cnt=256
-----
-+
-. Run a `dracut -f` command, and reboot the host.
-
-. After reboot, verify that the above setting has been applied by checking the corresponding `sysfs` value:
-+
-----
-# cat /sys/module/lpfc/parameters/lpfc_sg_seg_cnt
-256
-----
-Now the Broadcom FC-NVMe host should be able to send up to 1 MB I/O requests on the ONTAP namespace devices.
-
-=== Marvell/QLogic
+.Marvell/QLogic FC adapter for NVMe/FC
+--
 
 The native inbox `qla2xxx` driver included in the RHEL 8.7 kernel has the latest upstream fixes which are essential for ONTAP support.
 
+.Steps
 . Verify that you are running the supported adapter driver and firmware versions using the following command:
 
 +
@@ -219,6 +201,11 @@ QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
 # cat /sys/module/qla2xxx/parameters/ql2xnvmeenable 
 1 
 ----
+--
+
+=== Enable 1MB I/O (Optional)
+
+include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
 == Configure NVMe/TCP
 
