--- a/nvme_rhel_84.adoc
+++ b/nvme_rhel_84.adoc
@@ -17,7 +17,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.4 with ONTAP
 
 [.lead]
 
-NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with RHEL 8.4 with ANA (Asymmetric Namespace Access). ANA is the ALUA equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. The details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.4 and ONTAP as the target has been documented here.
+NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with RHEL 8.4 with ANA (Asymmetric Namespace Access). ANA is the ALUA equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. You can enabe NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.4 and ONTAP as the target.
 
 == Features
 
@@ -31,11 +31,11 @@ No new features have been added in this release.
 
 * SAN booting using the NVMe-oF protocol is currently not supported.
 
-
-
 == Enable in-kernel NVMe multipath
 
 You can use the following procedure to enable in-kernel NVMe multipath.
+
+.Steps
 
 .	Install RHEL 8.4 GA on the server. 
 
@@ -98,9 +98,15 @@ Restart the multipathd daemon by running a `systemctl restart multipathd` comman
 
 == Configure NVMe/FC
 
-=== Broadcom/Emulex
+You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
 
-.	Verify that you are using the supported adapter. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported adapters.
+[role="tabbed-block"]
+====
+.Broadcom/Emulex
+--
+.Steps
+
+.	Verify that you are using the supported adapter. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the most current list of supported adapters.
 +
 ----
 # cat /sys/class/scsi_host/host*/modelname
@@ -112,7 +118,7 @@ Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 ----
 +
 
-.	Verify that you are using the recommended Broadcom lpfc firmware and inbox driver. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported adapter driver and firmware versions.
+.	Verify that you are using the recommended Broadcom lpfc firmware and inbox driver. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the most current list of supported adapter driver and firmware versions.
 +
 ----
 # cat /sys/class/scsi_host/host*/fwrev
@@ -123,14 +129,13 @@ Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 ----
 +
 
-.	Verify that `lpfc_enable_fc4_type` is set to 3
+.	Verify that `lpfc_enable_fc4_type` is set to 3.
 +
 ----
 # cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 3
 ----
 +
-
 .	Verify that the initiator ports are up and running, and you are able to see the target LIFs.
 +
 [subs=+quotes]
@@ -165,31 +170,9 @@ Total FCP Cmpl 000000002e14f170 Issue 000000002e14f17a OutIO 000000000000000a
 abort 000016bb noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00001f50 Err 0000d9f8
 ----
-
-
-====	 Enable 1MB I/O size (Optional)
-
-ONTAP reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data which means the maximum I/O request size should be up to 1 MB. However, to issue I/O requests of size 1 MB for the Broadcom NVMe/FC host, the lpfc parameter `lpfc_sg_seg_cnt` should also be bumped up to 256 from the default value of 64. Use the following instructions to do so:
-
-. Append the value `256` in the respective `modprobe lpfc.conf` file:
-+
-----
-# cat /etc/modprobe.d/lpfc.conf
-options lpfc lpfc_sg_seg_cnt=256
-----
-+
-. Run a `dracut -f` command, and reboot the host.
-
-. After reboot, verify that the above setting has been applied by checking the corresponding `sysfs` value:
-+
-----
-# cat /sys/module/lpfc/parameters/lpfc_sg_seg_cnt
-256
-----
-Now the Broadcom FC-NVMe host should be able to send up to 1MB I/O requests on the ONTAP namespace devices.
-
-=== Marvell/QLogic
-
+--
+.Marvell/QLogic FC adapter for NVMe/FC
+--
 The native inbox `qla2xxx` driver included in the RHEL 8.4 GA kernel has the latest upstream fixes which are essential for ONTAP support.
 
 . Verify that you are running the supported adapter driver and firmware versions using the following command:
@@ -209,16 +192,18 @@ QLE2742 FW:v9.06.02 DVR:v10.02.00.104-k
 # cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 1
 ----
+--
+====
+
+=== Enable 1MB I/O (Optional)
+
+include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
+
+
 
 == Configure NVMe/TCP
 
-Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This manifests two major limitations on the Linux NVMe/TCP host:
-
-* *No auto-reconnect after paths get reinstated* NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default `ctrl-loss-tmo` timer of 10 minutes following a path down.
-
-* *No auto-connect during host bootup* NVMe/TCP cannot automatically connect during host bootup as well.
-
-You should set the retry period for failover events to at least 30 minutes to prevent timeouts. You can increase the retry period by increasing the value of the ctrl_loss_tmo timer. Following are the details:
+include::_include/nvme/reuse_configure_nvmetcp.adoc[]
 
 .Steps
 . Verify whether the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
@@ -277,6 +262,10 @@ sectype: none
 ----
 
 == Validate NVMe-oF
+
+You can use the following procedure to validate NVMe-oF.
+
+.Steps
 
 . Verify that in-kernel NVMe multipath is indeed enabled by checking:
 +
