--- a/nvme_rhel_81.adoc
+++ b/nvme_rhel_81.adoc
@@ -175,6 +175,8 @@ include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
 ==	Validate NVMe/FC
 
+You can use the following procedure to validate NVMe/FC.
+
 include::_include/nvme/reuse_validating_nvme_fc_rhel.adoc[]
 
 
