--- a/nvme_rhel_84.adoc
+++ b/nvme_rhel_84.adoc
@@ -17,7 +17,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.4 with ONTAP
 
 [.lead]
 
-NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with RHEL 8.4 with ANA (Asymmetric Namespace Access). ANA is the ALUA equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. You can enabe NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.4 and ONTAP as the target.
+NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with Red Hat Enterprise Linux (RHEL) 8.4 with ANA (Asymmetric Namespace Access). ANA is the ALUA equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. You can enabe NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.4 and ONTAP as the target.
 
 == Features
 
@@ -173,7 +173,7 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 --
 .Marvell/QLogic FC adapter for NVMe/FC
 --
-The native inbox `qla2xxx` driver included in the RHEL 8.4 GA kernel has the latest upstream fixes which are essential for ONTAP support.
+The native inbox `qla2xxx` driver included in the RHEL 8.4 GA kernel has the latest fixes which are essential for ONTAP support.
 
 . Verify that you are running the supported adapter driver and firmware versions using the following command:
 
