--- a/nvme_rhel_86.adoc
+++ b/nvme_rhel_86.adoc
@@ -16,7 +16,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.6 with ONTAP
 :source-highlighter: highlighter.js
 
 [.lead]
-NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with RHEL 8.6 with ANA (Asymmetric Namespace Access). ANA is the ALUA equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. The details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.6 and ONTAP as the target has been documented here.
+NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with Red Hat Enterprise Linux (RHEL) 8.6 with ANA (Asymmetric Namespace Access). ANA is the ALUA equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. The details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.6 and ONTAP as the target has been documented here.
 
 See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for accurate details regarding supported configurations.
 
@@ -34,10 +34,11 @@ See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix
 * SAN booting using the NVMe-oF protocol is currently not supported.
 
 
-
-
-
 == Enable in-kernel NVMe Multipath
+
+You can use the following procedure to enable in-kernel NVMe multipath. 
+
+.Steps
 
 .	Install RHEL 8.6 on the server. After the installation is complete, verify that you are running the specified RHEL 8.6 kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported versions.
 
