--- a/nvme_rhel_87.adoc
+++ b/nvme_rhel_87.adoc
@@ -16,7 +16,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.7 with ONTAP
 :source-highlighter: highlighter.js
 
 [.lead]
-NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with RHEL 8.7 with ANA (Asymmetric Namespace Access). ANA is the ALUA equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. This topic includes the details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.7 and ONTAP as the target.
+NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with Red Hat Enterprise Linux (RHEL) 8.7 with ANA (Asymmetric Namespace Access). ANA is the ALUA equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. This topic includes the details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.7 and ONTAP as the target.
 
 See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for accurate details regarding supported configurations.
 
@@ -34,6 +34,8 @@ RHEL 8.7 includes support for NVMe/TCP (as a Technology Preview feature) in addi
 
 
 == Enable in-kernel NVMe Multipath
+
+You can use the following procedure to enable in-kernel NVMe multipath. 
 
 .Steps
 
@@ -86,7 +88,7 @@ NOTE: If the host NQN strings do not match, you should use the `vserver modify` 
 +
 [NOTE]
 ====
-If you intend to run both NVMe and SCSI co-existent traffic on the same host, it is recommended to use in-kernel NVMe multipath for ONTAP namespaces and dm-multipath for ONTAP LUNs respectively. This means that the ONTAP namespaces should be excluded from dm-multipath to prevent dm-multipath from claiming these namespace devices. This can be done by adding the enable_foreign setting to the `/etc/multipath.conf` file:
+If you intend to run both NVMe and SCSI co-existent traffic on the same host, NetApp recommends using in-kernel NVMe multipath for ONTAP namespaces and dm-multipath for ONTAP LUNs respectively. This means that the ONTAP namespaces should be excluded from dm-multipath to prevent dm-multipath from claiming these namespace devices. This can be done by adding the enable_foreign setting to the `/etc/multipath.conf` file:
 
 ----
 # cat /etc/multipath.conf
@@ -95,9 +97,8 @@ defaults {
 }
 ----
 
+Restart the multipathd daemon by running a `systemctl restart multipathd` command to allow the new setting to take effect.
 ====
-+
-. Restart the multipathd daemon by running a `systemctl restart multipathd` command to allow the new setting to take effect.
 
 
 == Configure NVMe/FC
@@ -181,7 +182,7 @@ FCP CMPL: xb 0000006b Err 00017f99
 .Marvell/QLogic FC adapter for NVMe/FC
 --
 
-The native inbox `qla2xxx` driver included in the RHEL 8.7 kernel has the latest upstream fixes which are essential for ONTAP support.
+The native inbox `qla2xxx` driver included in the RHEL 8.7 kernel has the latest fixes which are essential for ONTAP support.
 
 .Steps
 . Verify that you are running the supported adapter driver and firmware versions using the following command:
@@ -202,6 +203,7 @@ QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
 1 
 ----
 --
+====
 
 === Enable 1MB I/O (Optional)
 
