--- a/nvme_rhel_91.adoc
+++ b/nvme_rhel_91.adoc
@@ -78,9 +78,12 @@ NOTE: If the host NQN strings do not match, you should use the `vserver modify` 
 
 == Configure NVMe/FC
 
-=== Broadcom/Emulex
-
+[role="tabbed-block"]
+====
+.Broadcom/Emulex
+--
 .Steps
+--
 
 .	Verify that you are using the supported adapter. For the most current list of supported adapters, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
 +
@@ -163,34 +166,11 @@ Total FCP Cmpl 000000000001dd28 Issue 000000000001dd29 OutIO 0000000000000001
 FCP CMPL: xb 00000000 Err 00000004
 
 ----
+--
 
-
-====	 Enable 1MB I/O size (Optional)
-
-ONTAP reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data which means the maximum I/O request size should be up to 1 MB. However, to issue I/O requests of size 1 MB for the Broadcom NVMe/FC host, the lpfc parameter lpfc_sg_seg_cnt should also be bumped up to 256 from the default value of 64. Use the following instructions to do so:
-
-.Steps
-
-. Append the value `256` in the respective `modprobe lpfc.conf` file:
-+
-----
-# cat /etc/modprobe.d/lpfc.conf
-options lpfc lpfc_sg_seg_cnt=256
-----
-+
-. Run a `dracut -f` command, and reboot the host.
-
-. After reboot, verify that the above setting has been applied by checking the corresponding `sysfs` value:
-+
-----
-# cat /sys/module/lpfc/parameters/lpfc_sg_seg_cnt
-256
-----
-Now the Broadcom FC-NVMe host should be able to send up to 1MB I/O requests on the ONTAP namespace devices.
-
-=== Marvell/QLogic
-
-The native inbox `qla2xxx` driver included in the RHEL 9.1 kernel has the latest upstream fixes which are essential for ONTAP support.
+.Marvell/QLogic FC adapter for NVMe/FC
+--
+The native inbox `qla2xxx` driver included in the RHEL 9.1 kernel has the latest fixes which are essential for ONTAP support.
 
 .Steps
 
@@ -211,16 +191,16 @@ QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
 # cat /sys/module/qla2xxx/parameters/ql2xnvmeenable 
 1 
 ----
+--
+====
+
+=== Enable 1MB I/O (Optional)
+
+include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
 == Configure NVMe/TCP
 
-Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This manifests two major limitations on the Linux NVMe/TCP host:
-
-* *No auto-reconnect after paths get reinstated* NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default `ctrl-loss-tmo` timer of 10 minutes following a path down.
-
-* *No auto-connect during host boot* NVMe/TCP cannot connect automatically during host boot.
-
-You should set the retry period for failover events to at least 30 minutes to prevent timeouts. You can increase the retry period by increasing the value of the `ctrl_loss_tmo timer` using the following procedure:
+include::_include/nvme/reuse_configure_nvmetcp.adoc[]
 
 .Steps
 . Verify whether the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
@@ -281,6 +261,8 @@ sectype: none
 ----
 
 == Validate NVMe-oF
+
+You can use the following procedure to validate NVMe-oF.
 
 .Steps
 
